# ds-project-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/config/: config.yaml
{{cookiecutter.project_slug}}/src/utils/: bq_data_transfer.py  feature_eng.py
