[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.0.1"
description = "{{cookiecutter.project_short_description}}"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
heps-ds-utils = "0.4.7a9"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ipykernel = "^6.13.0"
python-dotenv = "^0.20.0"
pylint = "^2.13.5"
jupyter = "^1.0.0"
isort = "^5.12.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
interrogate = "^1.5.0"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
|   \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 119

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 85
exclude = ["docs", "data", "models", "notebooks", "reports", "tests"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = "./docs"
badge-format = "svg"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
